src/style.css
li {
  list-style: none;
}

.card-1 {
  width: 18rem;
}

.likes {
  align-items: flex-end;
  flex-direction: column;
}

.bi-heart {
  font-size: 20px;
}

.row {
  flex-wrap: nowrap;
}

.likes-btn {
  border: none;
  height: 25px;
  background-color: white;
  width: 6rem;
}

.space-cards {
  display: grid;
  column-gap: 50px;
  grid-template-columns: auto auto auto;
}

.card-shad {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

